--- a/04-deployment/streaming/Dockerfile
+++ b/04-deployment/streaming/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/lambda/python:3.9
+FROM public.ecr.aws/lambda/python:3.12
 
 RUN pip install -U pip
 RUN pip install pipenv 
@@ -7,6 +7,6 @@ COPY [ "Pipfile", "Pipfile.lock", "./" ]
 
 RUN pipenv install --system --deploy
 
-COPY [ "lambda_function.py", "./" ]
+COPY lambda_function.py ./
 
 CMD [ "lambda_function.lambda_handler" ]
