--- a/04-deployment/streaming/Pipfile
+++ b/04-deployment/streaming/Pipfile
@@ -6,9 +6,11 @@ name = "pypi"
 [packages]
 boto3 = "*"
 mlflow = "*"
-scikit-learn = "==1.0.2"
+scikit-learn = "*"
+scipy = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.12"
+python_full_version = "3.12.3"
